--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "postinstall": "sed -i 's/..\\/..\\/App/..\\/..\\/src\\/App/g' node_modules/expo/AppEntry.js"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.17",
     "expo": "~50.0.5",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
