--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "postinstall": "sed -i 's/..\\/..\\/App/..\\/..\\/src\\/App/g' node_modules/expo/AppEntry.js"
   },
   "dependencies": {
-    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native": "^6.1.10",
     "@react-navigation/native-stack": "^6.9.17",
+    "@react-navigation/stack": "^6.3.21",
     "expo": "~50.0.7",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.4",
+    "react-native-gesture-handler": "~2.14.0",
+    "react-native-swipe-gestures": "^1.0.5",
     "socket.io-client": "^4.7.4"
   },
   "devDependencies": {
