--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "sed -i 's/..\\/..\\/App/..\\/..\\/src\\/App/g' node_modules/expo/AppEntry.js"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/native-stack": "^6.9.17",
     "@react-navigation/stack": "^6.3.21",
